in mobile like and comments alignment mismatched trying to fix trail1

--- a/posts/static/posts/show_posts.css
+++ b/posts/static/posts/show_posts.css
@@ -86,11 +86,13 @@ p {
 .like-comment-space {
     width: 95%;
     display: flex;
+    height: 50px;
 }
+
 
 .like {
     width: 20%;
-    height: fit-content;
+    height: 100%;
 }
 
 h4 {
@@ -117,7 +119,7 @@ h4 {
 
 .post-wrapper {
     width: 40%;
-    height: fit-content;
+    height: 100%;
 }
 
 
